--- a/package.json
+++ b/package.json
@@ -1,24 +1,57 @@
 {
-  "name": "anime-site",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.0"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
-  }
+	"name": "anime-site",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack --port=3000",
+		"build": "next build",
+		"start": "next start",
+		"test": "biome check && jest",
+		"test:watch": "jest --watch",
+		"test:coverage": "jest --coverage",
+		"lint": "biome check .",
+		"format": "biome format --write .",
+		"format:check": "biome check ."
+	},
+	"dependencies": {
+		"@radix-ui/react-avatar": "^1.1.4",
+		"@radix-ui/react-dialog": "^1.1.7",
+		"@radix-ui/react-dropdown-menu": "^2.1.7",
+		"@radix-ui/react-scroll-area": "^1.2.4",
+		"@radix-ui/react-select": "^2.1.7",
+		"@radix-ui/react-separator": "^1.1.3",
+		"@radix-ui/react-slot": "^1.2.0",
+		"@radix-ui/react-tabs": "^1.1.4",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"framer-motion": "^12.6.5",
+		"lucide-react": "^0.487.0",
+		"next": "15.3.0",
+		"next-themes": "^0.4.6",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"tailwind-merge": "^3.2.0",
+		"tailwindcss-animate": "^1.0.7",
+		"tw-animate-css": "^1.2.5"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@tailwindcss/postcss": "^4",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.3.0",
+		"@testing-library/user-event": "^14.6.1",
+		"@types/jest": "^29.5.14",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"babel-jest": "^29.7.0",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"lefthook": "^1.11.9",
+		"tailwindcss": "^4.1.3",
+		"ts-jest": "^29.3.1",
+		"ts-node": "^10.9.2",
+		"typescript": "^5",
+		"whatwg-fetch": "^3.6.20"
+	}
 }
